FIX: modal/Nav z-index 수정

--- a/src/components/Nav/Component/Modal.scss
+++ b/src/components/Nav/Component/Modal.scss
@@ -10,7 +10,6 @@
   .ham {
     float: right;
     margin: 5px 5px;
-    z-index: 10;
   }
 
   .modalContent {
